Fix: CategoryList layout issues.

--- a/packages/web-ui/src/styles/_global.scss
+++ b/packages/web-ui/src/styles/_global.scss
@@ -111,6 +111,8 @@ h6 {
 }
 
 .tiled-list {
+  margin-left: 0px;
+  margin-right: 0px;
   list-style-type: none;  
 }
 
